# td-monitor

./: .env  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tray.rs
src/apis/: index.ts
src/stores/: index.ts
src/types/: common.d.ts  components.d.ts
src/utils/: events.ts  request.ts  tools.ts
src/views/: Home.vue  Login.vue
