[package]
name = "three-dog-monitor"
version = "1.0.0"
description = "three-dog-monitor"
authors = [ "半糖人类" ]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "window-start-dragging",
  "window-set-size",
  "window-set-decorations",
  "window-set-resizable",
  "dialog-message",
  "dialog-ask",
  "window-hide",
  "shell-open",
  "clipboard-write-text",
  "http-all",
  "macos-private-api",
  "system-tray",
] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
